# typing_environs

./: README.md  pyproject.toml
example/: __init__.py  test_envs.py
example/envs/: README.md  __init__.py  default.env  dev.env  fat.env  models.py  prod.env
example/envs2/: __init__.py  default.env  dev.env  fat.env  models.py  prod.env
typing_environs/: __init__.py  environment.py
